Endpoint for getting/displaying fitbit steps

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,22 +42,22 @@
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#"><span class="benjamin">Benjamin</span> <span class="congdon">Congdon</span></a>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span> 
+        </button>
+        <a class="navbar-brand" href="#"><span class="benjamin">Benjamin</span> <span class="congdon">Congdon</span></a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="https://github.com/benjamincongdon/Resume/raw/master/BenjaminCongdonResume.pdf">>Resume<</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="https://github.com/benjamincongdon/Resume/raw/master/BenjaminCongdonResume.pdf">Resume</a></li>
-      </ul>
-    </div>
-  </div>
   </nav>
   <div class="container">
     <div class="row">
@@ -74,7 +74,7 @@
         </div><br>
         <div class="btn-group social-media-buttons">
           <a href="https://www.linkedin.com/pub/benjamin-congdon/104/613/169"><button class="btn btn-sm btn-default"  type="button">Linkedin <i class="fa fa-linkedin-square"></i></button></a>
-          <!-- <a href="https://medium.com/@bencongdon"><button class="btn btn-sm btn-default" type="button">Medium <i class="fa fa-medium"></i></button></a> -->
+          <a href="https://medium.com/@bencongdon"><button class="btn btn-sm btn-default" type="button">Medium <i class="fa fa-medium"></i></button></a>
           <a href="https://twitter.com/benrcongdon"><button class="btn btn-sm btn-default"  type="button">Twitter <i class="fa fa-twitter-square"></i></button></a>
           
         </div>
@@ -272,7 +272,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <p>&copy; Benjamin Congdon <script>document.write(new Date().getFullYear())</script></p>
+      <p>&copy; Benjamin Congdon 2015-<script>document.write(new Date().getFullYear())</script></p>
     </footer>
 
   </div> <!-- /container -->
