Added Quora link, condensed social buttons. Starting work on "about" page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Benjamin Congdon's Personal Website</title>
+  <title>About Benjamin Congdon</title>
 
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -52,7 +52,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/about">About</a></li>
+          <li><a href="/">About</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="https://github.com/benjamincongdon/Resume/raw/master/BenjaminCongdonResume.pdf">Resume</a></li>
         </ul>
