--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,9 +91,9 @@
         <ul style="list-style-type:none">
           <li>... I've taken <span class="by-the-numbers">3,000,000</span> steps.</li>
           <li>... I've completed <span class="by-the-numbers">3,000,000</span> tasks</li>
-          <li>... I've made <span class="by-the-numbers">3,000,000</span> commits to github.</li>
+          <li>... I've made <span class="by-the-numbers">3,000,000</span> commits to github this year.</li>
           <li>... I've tweeted <span class="by-the-numbers">3,000,000</span> tweets.</li>
-          <li>... I've composed <span class="by-the-numbers">3,000,000</span> answers on Quora.</li>
+          <li>... I've composed <span class="by-the-numbers">{{ quora_answers }}</span> answers on Quora.</li>
           <li>... I've taken <span class="by-the-numbers">3,000,000</span> classes.</li>
         </ul>  
         <p style="text-align: right"><strong>... and I'm just getting started.</strong></p>
