Github/Twitter scrapers

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -89,12 +89,9 @@
         <h3><b>>By the Numb3rs<</b></h3>
         <p><strong>Since arriving at UIUC...</strong></p>
         <ul style="list-style-type:none">
-          <li>... I've taken <span class="by-the-numbers">3,000,000</span> steps.</li>
-          <li>... I've completed <span class="by-the-numbers">3,000,000</span> tasks</li>
-          <li>... I've made <span class="by-the-numbers">3,000,000</span> commits to github this year.</li>
-          <li>... I've tweeted <span class="by-the-numbers">3,000,000</span> tweets.</li>
+          <li>... I've made <span class="by-the-numbers">{{ github_commits }}</span> commits to Github this year.</li>
+          <li>... I've tweeted <span class="by-the-numbers">{{ tweets }}</span> tweets.</li>
           <li>... I've composed <span class="by-the-numbers">{{ quora_answers }}</span> answers on Quora.</li>
-          <li>... I've taken <span class="by-the-numbers">3,000,000</span> classes.</li>
         </ul>  
         <p style="text-align: right"><strong>... and I'm just getting started.</strong></p>
       </div>
@@ -284,7 +281,7 @@
     <!-- CS 196 -->
     <div class="row project">
       <div class="col-md-3 project-title">
-        <a href="http://ludumdare.com/compo/ludum-dare-29/?action=preview&uid=36045">Course Assistant <br>- CS 196</a>
+        <a href="https://courses.engr.illinois.edu/cs19625/#/">Course Assistant <br>- CS 196</a>
       </div>
       <div class="col-md-6">
         <ul style="list-style-type:circle; padding-left: 5px;">
