Trying to get scrolling to work.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/about">About</a></li>
+          <li><a href="" id="#about">About</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="https://github.com/benjamincongdon/Resume/raw/master/BenjaminCongdonResume.pdf">Resume</a></li>
         </ul>
@@ -103,6 +103,7 @@
     </div>
     <div class="row">
       <!-- About -->
+      <a name="about">
       <div class="col-md-12 col-xs-12 about vert-align">
           <h4><b>>About<</b></h4>
           <p>I am currently a student at the University of Illinois at Urbana-Champaign,
