Yet more updates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
         <a href="https://www.quora.com/profile/Benjamin-Congdon-1"><button class="btn btn-sm btn-default" type="button"><span class="fa"><strong>Q</strong></span></button></a>
       </div>
     </div>
-    <div class="col-md-6 col-xs-6 about vert-align">
+    <div class="col-md-6 col-xs-12 about vert-align">
         <!-- About -->
         <h4><b>>About<</b></h4>
         <p>I am currently a student at the University of Illinois at Urbana-Champaign,
@@ -38,18 +38,18 @@
         now a member of the UIUC Wind Orchestra.</p>
     </div>
   </div>
-  <div class="row">
-      <div class="col-md-12 col-xs-12 ">
-        <h3><b>>Stats<</b></h3>
-        <p><strong>Since arriving at UIUC...</strong></p>
-        <ul style="list-style-type:none">
-          <li>... I've made <span class="by-the-numbers">{{ github_commits }}</span> commits to Github this year.</li>
-          <li>... I've tweeted <span class="by-the-numbers">{{ tweets }}</span> tweets.</li>
-          <li>... I've composed <span class="by-the-numbers">{{ quora_answers }}</span> answers on Quora.</li>
-        </ul>  
-        <p style="text-align: right"><strong>... and I'm just getting started.</strong></p>
-      </div>
+  <!-- <div class="row">
+    <div class="col-md-12 col-xs-12 ">
+      <h3><b>>Stats<</b></h3>
+      <p><strong>Since arriving at UIUC...</strong></p>
+      <ul style="list-style-type:none">
+        <li>... I've made <span class="by-the-numbers">{{ github_commits }}</span> commits to Github this year.</li>
+        <li>... I've tweeted <span class="by-the-numbers">{{ tweets }}</span> tweets.</li>
+        <li>... I've composed <span class="by-the-numbers">{{ quora_answers }}</span> answers on Quora.</li>
+      </ul>  
+      <p style="text-align: right"><strong>... and I'm just getting started.</strong></p>
     </div>
+  </div> -->
 </div>
 
 {% endblock %}
