--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div class="col-md-2 project-date">
-      January, 2016 - present
+      January, 2016
     </div>
   </div>
 
