--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -52,7 +52,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">About</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/projects">Projects</a></li>
           <li><a href="https://github.com/benjamincongdon/Resume/raw/master/BenjaminCongdonResume.pdf">Resume</a></li>
         </ul>
