--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -33,7 +33,7 @@
 
   </script>
 
-  <!-- Personal CSS & JS -->
+  <!-- Personal CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
 
 </head>
