--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -59,7 +59,8 @@
       </div>
     </div>
   </nav>
-  {% block body %} {% endblock %}
+  {% block body %} 
+  {% endblock %}
   <!-- Footer -->
   <div class="container">
     <footer class="footer">
